Fixes text overflow genre show.

--- a/app/assets/stylesheets/genres.css.scss
+++ b/app/assets/stylesheets/genres.css.scss
@@ -214,7 +214,7 @@ li.page-link h2 {
   white-space: nowrap;
   text-overflow: ellipsis;
   -webkit-transition: color 1s;
-  max-width: 500px;
+  max-width: 240px;
   text-shadow:
   -1px -1px 0 #000,
   1px -1px 0 #000,
@@ -232,7 +232,7 @@ li.page-link h3 {
   -webkit-transition: color 1s;
   white-space: nowrap;
   text-overflow: ellipsis;
-  max-width: 500px;
+  max-width: 240px;
   text-shadow:
   -1px -1px 0 #000,
   1px -1px 0 #000,
